[gd_scene load_steps=2 format=3 uid="uid://owatvfebjyar"]

[ext_resource type="Script" uid="uid://c2hja3t50rwae" path="res://Settings.gd" id="1_bvb5x"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bvb5x")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ResolutionContainer" type="HBoxContainer" parent="VBoxContainer/SettingsContainer"]
layout_mode = 2
alignment = 1

[node name="ResolutionLabel" type="Label" parent="VBoxContainer/SettingsContainer/ResolutionContainer"]
layout_mode = 2
text = "Resolution:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResolutionOption" type="OptionButton" parent="VBoxContainer/SettingsContainer/ResolutionContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="FullscreenContainer" type="HBoxContainer" parent="VBoxContainer/SettingsContainer"]
layout_mode = 2
alignment = 1

[node name="FullscreenLabel" type="Label" parent="VBoxContainer/SettingsContainer/FullscreenContainer"]
layout_mode = 2
text = "Fullscreen:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullscreenCheck" type="CheckBox" parent="VBoxContainer/SettingsContainer/FullscreenContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Back to Main Menu"

[node name="ApplyButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Apply Changes"

[connection signal="item_selected" from="VBoxContainer/SettingsContainer/ResolutionContainer/ResolutionOption" to="." method="_on_resolution_option_item_selected"]
[connection signal="toggled" from="VBoxContainer/SettingsContainer/FullscreenContainer/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/ApplyButton" to="." method="_on_apply_button_pressed"]
